--- a/detail/detail_01.html
+++ b/detail/detail_01.html
@@ -33,46 +33,29 @@
         <main class="animsition">
             <article class="works-description" data-animsition-out-class="fade-out">
                 <section>
-                    <p class="works-img"><img src="../img/details/works_01.gif"></p>
-                </section>                
+                    <p class="works-img"><img src="../img/details/works_01.png"></p>
+                </section>
                 <section>
-                    <h3>社内向け動画製作（5分程度）</h3>
+                    <h3>商品試食用POP作成</h3>
                     <h4>ターゲット</h4>
-                    <p class="detail-txt">社内経営陣</p>
+                    <p class="detail-txt">お土産屋さんを訪れる観光客</p>
                 </section>
                 <section>
-                    <h4>目的</h4>
-                    <p class="detail-txt">期末のマネージメントレビューにて期内の各部署での改善活動の取り組みを紹介しながら振り返る。
-                    <br>取り組みの様子や効果を経営陣にアピールする。</p>
-                </section>
-                <section>
-                    <h4>担当</h4>
-                    <p class="detail-txt">動画・写真撮影（一部）、動画・画像編集、オープニングアニメーション・ロゴ作成</p>
-                </section>
-                <section>
-                    <h4>使用ツール</h4>
-                    <p class="detail-txt">Illustrator／After Effects／Premiere Pro</p>
-                </section>
-                <section>
-                    <h4>製作期間</h4>
-                    <p class="detail-txt">1週間程度</p>
-                </section>
-                <section>
-                    <h4>製作について</h4>
-                    <p class="detail-txt">主題（改善活動の取り組み紹介）は抑えつつとにかくインパクトを、との要望の下製作に取り組んだ。
-                    <br>経営陣の年齢層を考慮し、『帰ってきたウルトラマン』風を意識してタイトルロゴ・オープニング及び場面転換アニメーションを製作した。</p>
+                    <h4>制作について</h4>
+                    <p class="detail-txt">学生時代、当時アルバイトをしていた中華街のお土産屋さんのお菓子の試食用にPOPを作成した。
+                    <br>それぞれ商品のパッケージのデザインから着想を得て、限られたスペース内で手に取る人に何の試食なのかを伝えるとともに、商品自体にも興味を持ってもらえるよう意識して制作した。</p>
                 </section>
             </article>
             <section class="move">
                 <ul>
-                    <li></li>
+                    <li><a href="detail_02.html">前へ</a></li>
                     <li><a href="../index.html">作品TOPへ</a></li>
-                    <li><a href="detail_02.html">次へ</a></li>
+                    <li></li>
                 </ul>
-            </section>           
+            </section>
         </main>
         <footer class="foot-area">　
-            <p class="footer-txt">&copy;2021 Haru koda.</p>        
+            <p class="footer-txt">&copy;2022 Haru koda.</p>        
         </footer>
     </body>
 </html>
