--- a/detail/detail_03.html
+++ b/detail/detail_03.html
@@ -61,41 +61,39 @@
                         document.querySelector('.next').addEventListener('click',() => mySiema.next());
                     </script>
                 </div>
-                <!-- <section>
-                    <p class="works-img"><img src="../../img/details/works_03.png"></p>
-                </section>                 -->
                 <section>
-                    <h3>企業ロゴ・ホームページ製作（未公開）</h3>
+                    <h3>ラッピングペーパーのデザイン-1</h3>
+                    <h4>ターゲット</h4>
+                    <p class="detail-txt">家族</p>
                 </section>
                 <section>
-                    <h4>担当</h4>
-                    <p class="detail-txt">ロゴデザイン・サイトデザイン・コーディング</p>
+                    <h4>目的</h4>
+                    <p class="detail-txt">誕生日祝い</p>
                 </section>
                 <section>
-                    <h4>使用ツール・言語</h4>
-                    <p class="detail-txt">Illustrator／XD／HTML／CSS／JavaScript</p>
+                    <h4>使用ツール</h4>
+                    <p class="detail-txt">Illustrator／FireAlpaca</p>
                 </section>
                 <section>
-                    <h4>製作期間</h4>
-                    <p class="detail-txt">2週間程度</p>
+                    <h4>制作期間</h4>
+                    <p class="detail-txt">5時間</p>
                 </section>
                 <section>
-                    <h4>製作について</h4>
-                    <p class="detail-txt">知人が起業する（予定の）企業ロゴのデザインとホームページの作成依頼を受けて取り組んだ。
-                    <br>ロゴは人との繋がりをキーワードに、会社名の文字列及びそこから連想されるモチーフ（繋がり＝リンクのマーク）をイメージしてデザインを行った。
-                    </p>
+                    <h4>制作について</h4>
+                    <p class="detail-txt">サプライズで用意したプレゼントをラッピングする際、既製品では味気なく感じたためパターンを起こして包装紙を制作した。モチーフはきょうだいが幼い頃から家族全員で親しんでいる（家族にとってはシンボル的存在の）ぬいぐるみのイラストをメインに、お祝いのメッセージを散りばめた。
+                    <br>ぱっと見は既製品だが、目を凝らすとオリジナル、というささやかなサプライズを込めつつ、カラーバリエーションを複数用意し、ラッピングして渡した時のわくわく感を狙った。</p>
                 </section>
             </article>
             <section class="move">
                 <ul>
-                    <li><a href="detail_02.html">前へ</a></li>
+                    <li><a href="detail_04.html">前へ</a></li>
                     <li><a href="../index.html">作品TOPへ</a></li>
-                    <li><a href="detail_04.html">次へ</a></li>
+                    <li><a href="detail_02.html">次へ</a></li>
                 </ul>
-            </section>           
+            </section>
         </main>
         <footer class="foot-area">　
-            <p class="footer-txt">&copy;2021 Haru koda.</p>        
+            <p class="footer-txt">&copy;2022 Haru koda.</p>        
         </footer>
     </body>
 </html>
