--- a/detail/detail_05.html
+++ b/detail/detail_05.html
@@ -34,37 +34,35 @@
             <article class="works-description" data-animsition-out-class="fade-out">
                 <section>
                     <p class="works-img"><img src="../img/details/works_05.png"></p>
-                </section>                
+                </section>
                 <section>
-                    <h3>社内掲示物（社内システム紹介ポスター</h3>
-                    <h4>ターゲット</h4>
-                    <p class="detail-txt">社内従業員・来訪者</p>
+                    <h3>趣味-5・作字</h3>
                 </section>
                 <section>
                     <h4>使用ツール</h4>
                     <p class="detail-txt">Illustrator</p>
                 </section>
                 <section>
-                    <h4>製作期間</h4>
-                    <p class="detail-txt">約1週間</p>
+                    <h4>制作期間</h4>
+                    <p class="detail-txt">2時間</p>
                 </section>
                 <section>
-                    <h4>製作について</h4>
-                    <p class="detail-txt">システム導入による効果を十分にアピールできるよう、導入前に抱えていた課題についても内容に取り入れた。
-                    <br>初見の人でもシステムの特徴や効果をイメージしやすいよう、イラスト素材を選定し配置した。
+                    <h4>制作について</h4>
+                    <p class="detail-txt">Illustratorの操作に慣れるため空き時間などに取り組んでいる作字の１つ。
+                    <br>その時の気分や目についた文字列からスケッチを起こして制作している。
                     </p>
                 </section>
             </article>
             <section class="move">
                 <ul>
-                    <li><a href="detail_04.html">前へ</a></li>
+                    <li><a href="detail_06.html">前へ</a></li>
                     <li><a href="../index.html">作品TOPへ</a></li>
-                    <li><a href="detail_06.html">次へ</a></li>
+                    <li><a href="detail_04.html">次へ</a></li>
                 </ul>
-            </section>           
+            </section>
         </main>
         <footer class="foot-area">　
-            <p class="footer-txt">&copy;2021 Haru koda.</p>        
+            <p class="footer-txt">&copy;2022 Haru koda.</p>        
         </footer>
     </body>
 </html>
