--- a/detail/detail_08.html
+++ b/detail/detail_08.html
@@ -36,31 +36,33 @@
                     <p class="works-img"><img src="../img/details/works_08.png"></p>
                 </section>
                 <section>
-                    <h3>趣味-1</h3>
+                    <h3>趣味-2・作字</h3>
                 </section>
                 <section>
                     <h4>使用ツール</h4>
                     <p class="detail-txt">Illustrator</p>
                 </section>
                 <section>
-                    <h4>製作期間</h4>
-                    <p class="detail-txt">1時間程度</p>
+                    <h4>制作期間</h4>
+                    <p class="detail-txt">2時間</p>
                 </section>
                 <section>
-                    <h4>製作について</h4>
-                    <p class="detail-txt">Illustratorの操作に慣れるため試行錯誤している時にできた？もの。</p>
+                    <h4>制作について</h4>
+                    <p class="detail-txt">Illustratorの操作に慣れるため空き時間などに取り組んでいる作字の１つ。
+                    <br>その時の気分や目についた文字列からスケッチを起こして制作している。
+                    </p>
                 </section>
             </article>
             <section class="move">
                 <ul>
-                    <li><a href="detail_07.html">前へ</a></li>
-                    <li><a href="..//index.html">作品TOPへ</a></li>
-                    <li><a href="detail_09.html">次へ</a></li>
+                    <li><a href="detail_09.html">前へ</a></li>
+                    <li><a href="../index.html">作品TOPへ</a></li>
+                    <li><a href="detail_07.html">次へ</a></li>
                 </ul>
             </section>
         </main>
         <footer class="foot-area">　
-            <p class="footer-txt">&copy;2021 Haru koda.</p>        
+            <p class="footer-txt">&copy;2022 Haru koda.</p>        
         </footer>
     </body>
 </html>
