--- a/detail/detail_10.html
+++ b/detail/detail_10.html
@@ -34,36 +34,37 @@
             <article class="works-description" data-animsition-out-class="fade-out">
                 <section>
                     <p class="works-img"><img src="../img/details/works_10.png"></p>
-                </section>
+                </section>                
                 <section>
-                    <h3>趣味-3・作字</h3>
+                    <h3>社内向けサービス内で使用するアイコン作成</h3>
+                    <h4>ターゲット</h4>
+                    <p class="detail-txt">社内製品組立作業者</p>
                 </section>
                 <section>
                     <h4>使用ツール</h4>
                     <p class="detail-txt">Illustrator</p>
                 </section>
                 <section>
-                    <h4>製作期間</h4>
-                    <p class="detail-txt">2時間</p>
+                    <h4>制作期間</h4>
+                    <p class="detail-txt">30分</p>
                 </section>
                 <section>
-                    <h4>製作について</h4>
-                    <p class="detail-txt">Illustratorの操作に慣れるため空き時間などに取り組んでいる作字の１つ。
-                    <br>その時の気分や目についた文字列からスケッチを起こして製作している。
-                    <br>これはコントラスト・強調を極端に表現しようと意識して製作に取り組んだ。
+                    <h4>制作について</h4>
+                    <p class="detail-txt">サービス内で使用するアイコンをデザインした。
+                    <br>各機能をイメージしやすいモチーフを採用し、背景色は社内現場で使用している机の色をイメージした。
                     </p>
                 </section>
             </article>
             <section class="move">
                 <ul>
-                    <li><a href="detail_09.html">前へ</a></li>
+                    <li><a href="detail_11.html">前へ</a></li>
                     <li><a href="../index.html">作品TOPへ</a></li>
-                    <li><a href="detail_11.html">次へ</a></li>
+                    <li><a href="detail_09.html">次へ</a></li>
                 </ul>
-            </section>
+            </section>           
         </main>
         <footer class="foot-area">　
-            <p class="footer-txt">&copy;2021 Haru koda.</p>        
+            <p class="footer-txt">&copy;2022 Haru koda.</p>        
         </footer>
     </body>
 </html>
