--- a/detail/detail_14.html
+++ b/detail/detail_14.html
@@ -32,68 +32,47 @@
         </header>   
         <main class="animsition">
             <article class="works-description" data-animsition-out-class="fade-out">
-                <div class="detail-top">
-                    <section class="siema">
-                        <p class="works-img"><img src="../img/details/works_14_01.png"></p>
-                        <p class="works-img"><img src="../img/details/works_14_02.png"></p>
-                        <p class="works-img"><img src="../img/details/works_14_03.png"></p>
-                    </section>
-                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
-                    <button class="next"><i class="fas fa-chevron-right"></i></button>       
-                    <script src="siema.min.js"></script>
-                    <script>                    
-                        const mySiema = new Siema({
-                            selector: '.siema',
-                            duration: 200,
-                            easing: 'ease-in',
-                            perPage: 1,
-                            startIndex: 0,
-                            draggable: false,
-                            multipleDrag: true,
-                            threshold: 10,
-                            loop: true,
-                            rtl: false,
-                            onInit: () => {},
-                            onChange: () => {},
-                        });
-                        setInterval(() => mySiema.next(), 10000);
-                        document.querySelector('.prev').addEventListener('click',() => mySiema.prev());
-                        document.querySelector('.next').addEventListener('click',() => mySiema.next());
-                    </script>
-                </div>
                 <section>
-                    <h3>ラッピングペーパーのデザイン-1</h3>
+                    <p class="works-img"><img src="../img/details/works_14.gif"></p>
+                </section>
+                <section>
+                    <h3>社外向け動画製作（1分程度）</h3>
                     <h4>ターゲット</h4>
-                    <p class="detail-txt">家族</p>
+                    <p class="detail-txt">就職活動を控えた高校生</p>
                 </section>
                 <section>
                     <h4>目的</h4>
-                    <p class="detail-txt">誕生日祝い</p>
+                    <p class="detail-txt">会社の特長紹介・親しみやすさや興味を持ってもらう</p>
+                </section>
+                <section>
+                    <h4>担当</h4>
+                    <p class="detail-txt">動画編集・動画用ロゴ・オープニングアニメーション作成</p>
                 </section>
                 <section>
                     <h4>使用ツール</h4>
-                    <p class="detail-txt">Illustrator／FireAlpaca</p>
+                    <p class="detail-txt">Illustrator／After Effects／Premiere Pro</p>
                 </section>
                 <section>
-                    <h4>製作期間</h4>
-                    <p class="detail-txt">5時間</p>
+                    <h4>制作期間</h4>
+                    <p class="detail-txt">3日</p>
                 </section>
                 <section>
-                    <h4>製作について</h4>
-                    <p class="detail-txt">サプライズで用意したプレゼントをラッピングする際、既製品では味気なく感じたためパターンを起こして包装紙を製作した。モチーフはきょうだいが幼い頃から家族全員で親しんでいる（家族にとってはシンボル的存在の）ぬいぐるみのイラストをメインに、お祝いのメッセージを散りばめた。
-                    <br>ぱっと見は既製品だが、目を凝らすとオリジナル、というささやかなサプライズを込めつつ、カラーバリエーションを複数用意し、ラッピングして渡した時のわくわく感を狙った。</p>
+                    <h4>制作について</h4>
+                    <p class="detail-txt">親しみやすさを強調して欲しいという要望から、冒頭（と終盤の）キャッチコピー部分には手書き文字を採用した。
+                    <br>事業内容や業務の紹介を中心にしつつ、従業員や職場の雰囲気が伝わるよう、素材を選定した。
+                    <br>オープニングアニメーションは、一般的な映画冒頭に挿入される配給会社のロゴムービー風で、との要望から試行錯誤しつつ制作に取り組んだ。</p>
                 </section>
             </article>
             <section class="move">
                 <ul>
-                    <li><a href="detail_13.html">前へ</a></li>
+                    <li><a href="detail_15.html">前へ</a></li>
                     <li><a href="../index.html">作品TOPへ</a></li>
-                    <li><a href="detail_15.html">次へ</a></li>
-                </ul>
+                    <li><a href="detail_13.html">次へ</a></li>
+                </ul>                
             </section>
         </main>
         <footer class="foot-area">　
-            <p class="footer-txt">&copy;2021 Haru koda.</p>        
+            <p class="footer-txt">&copy;2022 Haru koda.</p>        
         </footer>
     </body>
 </html>
