--- a/detail/detail_15.html
+++ b/detail/detail_15.html
@@ -32,66 +32,47 @@
         </header>   
         <main class="animsition">
             <article class="works-description" data-animsition-out-class="fade-out">
-                <div class="detail-top">
-                    <section class="siema">
-                        <p class="works-img"><img src="../img/details/works_15_01.png"></p>
-                        <p class="works-img"><img src="../img/details/works_15_02.png"></p>
-                        <p class="works-img"><img src="../img/details/works_15_03.png"></p>
-                    </section>
-                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
-                    <button class="next"><i class="fas fa-chevron-right"></i></button>       
-                    <script src="siema.min.js"></script>
-                    <script>                    
-                        const mySiema = new Siema({
-                            selector: '.siema',
-                            duration: 200,
-                            easing: 'ease-in',
-                            perPage: 1,
-                            startIndex: 0,
-                            draggable: false,
-                            multipleDrag: true,
-                            threshold: 10,
-                            loop: true,
-                            rtl: false,
-                            onInit: () => {},
-                            onChange: () => {},
-                        });
-                        setInterval(() => mySiema.next(), 10000);
-                        document.querySelector('.prev').addEventListener('click',() => mySiema.prev());
-                        document.querySelector('.next').addEventListener('click',() => mySiema.next());
-                    </script>
-                </div>
                 <section>
-                    <h3>ラッピングペーパーのデザイン-2</h3>
+                    <p class="works-img"><img src="../img/details/works_15.gif"></p>
+                </section>                
+                <section>
+                    <h3>社内向け動画製作（5分程度）</h3>
                     <h4>ターゲット</h4>
-                    <p class="detail-txt">個人的な親友2人</p>
+                    <p class="detail-txt">社内経営陣</p>
                 </section>
                 <section>
                     <h4>目的</h4>
-                    <p class="detail-txt">誕生日祝い</p>
+                    <p class="detail-txt">期末のマネージメントレビューにて期内の各部署での改善活動の取り組みを紹介しながら振り返る。
+                    <br>取り組みの様子や効果を経営陣にアピールする。</p>
+                </section>
+                <section>
+                    <h4>担当</h4>
+                    <p class="detail-txt">動画・写真撮影（一部）、動画・画像編集、オープニングアニメーション・ロゴ作成</p>
                 </section>
                 <section>
                     <h4>使用ツール</h4>
-                    <p class="detail-txt">Illustrator</p>
+                    <p class="detail-txt">Illustrator／After Effects／Premiere Pro</p>
                 </section>
                 <section>
-                    <h4>製作について</h4>
-                    <p class="detail-txt">学生時代、誕生日が連続する親友2人の当時22歳の誕生日プレゼントのために包装紙をデザインした。
-                    <br>前向きな意味とそのまま年齢の意味を込めてピースサインを散りばめたパターンにした。
-                    <br>名前を入れた部分は共通項の多い友人達であること、誕生日が連続することの類似性やお揃い感を意識した。
-                    <br>合わせてそれぞれの好きな色で名前の刺繍を施したトートバッグも贈った。</p>
+                    <h4>制作期間</h4>
+                    <p class="detail-txt">1週間程度</p>
+                </section>
+                <section>
+                    <h4>制作について</h4>
+                    <p class="detail-txt">主題（改善活動の取り組み紹介）は抑えつつとにかくインパクトを、との要望の下制作に取り組んだ。
+                    <br>経営陣の年齢層を考慮し、『帰ってきたウルトラマン』風を意識してタイトルロゴ・オープニング及び場面転換アニメーションを制作した。</p>
                 </section>
             </article>
             <section class="move">
                 <ul>
-                    <li><a href="detail_14.html">前へ</a></li>
+                    <li></li>
                     <li><a href="../index.html">作品TOPへ</a></li>
-                    <li><a href="detail_16.html">次へ</a></li>
+                    <li><a href="detail_14.html">次へ</a></li>
                 </ul>
-            </section>
+            </section>           
         </main>
         <footer class="foot-area">　
-            <p class="footer-txt">&copy;2021 Haru koda.</p>        
+            <p class="footer-txt">&copy;2022 Haru koda.</p>        
         </footer>
     </body>
 </html>
