--- a/detail/detail_16.html
+++ b/detail/detail_16.html
@@ -34,28 +34,44 @@
             <article class="works-description" data-animsition-out-class="fade-out">
                 <section>
                     <p class="works-img"><img src="../img/details/works_16.png"></p>
-                </section>
+                </section>                
                 <section>
-                    <h3>商品試食用POP作成</h3>
+                    <h3>Amazon商品画像-健康器具-</h3>
                     <h4>ターゲット</h4>
-                    <p class="detail-txt">お土産屋さんを訪れる観光客</p>
+                    <p class="detail-txt">当該商品購入検討者</p>
                 </section>
                 <section>
-                    <h4>製作について</h4>
-                    <p class="detail-txt">学生時代、当時アルバイトをしていた中華街のお土産屋さんのお菓子の試食用にPOPを作成した。
-                    <br>それぞれ商品のパッケージのデザインから着想を得て、限られたスペース内で手に取る人に何の試食なのかを伝えるとともに、商品自体にも興味を持ってもらえるよう意識して製作した。</p>
+                    <h4>目的</h4>
+                    <p class="detail-txt">購入検討者に商品の概要や特長、監修者のプロフィールを伝える。</p>
+                </section>
+                <section>
+                    <h4>担当</h4>
+                    <p class="detail-txt">画像加工・作成</p>
+                </section>
+                <section>
+                    <h4>使用ツール</h4>
+                    <p class="detail-txt">Illustrator／Photoshop</p>
+                </section>
+                <section>
+                    <h4>制作期間</h4>
+                    <p class="detail-txt">数時間</p>
+                </section>
+                <section>
+                    <h4>制作について</h4>
+                    <p class="detail-txt">複数ある商品画像のうち、監修者紹介の一枚を担当した。
+                    <br>既存の商品画像のテイストに合わせたトーンを設定しつつ、監修者の名前とプロフィールが明確に伝わるようレイアウトした。</p>
                 </section>
             </article>
             <section class="move">
                 <ul>
-                    <li><a href="detail_15.html">前へ</a></li>
+                    <li><a href="detail_17.html">前へ</a></li>
                     <li><a href="../index.html">作品TOPへ</a></li>
-                    <li></li>
+                    <li><a href="detail_15.html">次へ</a></li>
                 </ul>
-            </section>
+            </section>           
         </main>
         <footer class="foot-area">　
-            <p class="footer-txt">&copy;2021 Haru koda.</p>        
+            <p class="footer-txt">&copy;2022 Haru koda.</p>        
         </footer>
     </body>
 </html>
