--- a/about/index.html
+++ b/about/index.html
@@ -49,22 +49,27 @@
                         <h4>経歴</h4>
                             <table class="biography">
                                 <tr>
-                                    <td class="bio-year">1995</td>
+                                    <td class="bio-year">1995年</td>
                                     <td class="bio-status">広島生まれ</td>
                                 </tr>
                                 <tr>
-                                    <td class="bio-year">2018</td>
+                                    <td class="bio-year">2018年3月</td>
                                     <td class="bio-status">長崎大学 多文化社会学部 多文化社会学科 卒業</td>
                                 </tr>
                                 <tr>
-                                    <td class="bio-year">2018〜</td>
+                                    <td class="bio-year">2018年4月〜<br>2022年3月</td>
                                     <td class="bio-status">電気機器製造メーカー勤務</td>
+                                </tr>
+                                <tr>
+                                    <td class="bio-year">2022年4月</td>
+                                    <td class="bio-status">専門学校桑沢デザイン研究所専攻デザイン科VD専攻（夜間部）入学</td>
                                 </tr>
                             </table>
                     </section>
                     <section>
                         <h4>スキル</h4>
-                        <p class="profile-txt">業務や趣味・独学を通じて幅広く様々なスキルを身に付けています。</p>
+                        <p class="profile-txt">業務や趣味・独学を通じて幅広く様々なスキルを身に付けてきました。<br>
+                                                現在は専門学校にてグラフィックデザインを中心に学んでいます。</p>
                             <h5>デザイン関連</h5>
                                 <table class="skill-design">
                                 <tr>
@@ -130,7 +135,7 @@
             </section>                      
         </main>
         <footer class="foot-area">　
-            <p class="footer-txt">&copy;2021 Haru koda.</p>        
+            <p class="footer-txt">&copy;2022 Haru koda.</p>        
         </footer>
     </body>
 </html>
