--- a/detail/detail_11.html
+++ b/detail/detail_11.html
@@ -30,40 +30,74 @@
                 </nav>
             </div>
         </header>   
-        <main class="animsition" data-animsition-out-class="fade-out">
-            <article class="works-description">
+        <main class="animsition">
+            <article class="works-description" data-animsition-out-class="fade-out">
+                <div class="detail-top">
+                    <section class="siema">
+                        <p class="works-img"><img src="../img/details/works_11_01.png"></p>
+                        <p class="works-img"><img src="../img/details/works_11_02.png"></p>
+                    </section>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>       
+                    <script src="siema.min.js"></script>
+                    <script>                    
+                        const mySiema = new Siema({
+                            selector: '.siema',
+                            duration: 200,
+                            easing: 'ease-in',
+                            perPage: 1,
+                            startIndex: 0,
+                            draggable: false,
+                            multipleDrag: true,
+                            threshold: 10,
+                            loop: true,
+                            rtl: false,
+                            onInit: () => {},
+                            onChange: () => {},
+                        });
+                        setInterval(() => mySiema.next(), 10000);
+                        document.querySelector('.prev').addEventListener('click',() => mySiema.prev());
+                        document.querySelector('.next').addEventListener('click',() => mySiema.next());
+                    </script>
+                </div>                
                 <section>
-                    <p class="works-img"><img src="../img/details/works_11.png"></p>
+                    <h3>社内向けマニュアル作成</h3>
+                    <h4>ターゲット</h4>
+                    <p class="detail-txt">社内製品組立作業者</p>
                 </section>
                 <section>
-                    <h3>趣味-4・作字</h3>
+                    <h4>目的</h4>
+                    <p class="detail-txt">電子帳票ソリューションサービスi-Reporterの社内展開・基本操作方法の周知</p>
+                </section>
+                <section>
+                    <h4>担当</h4>
+                    <p class="detail-txt">製作全般（約20ページ・PDFにて発行）</p>
                 </section>
                 <section>
                     <h4>使用ツール</h4>
-                    <p class="detail-txt">Illustrator</p>
+                    <p class="detail-txt">Illustrator／Photoshop</p>
                 </section>
                 <section>
-                    <h4>製作期間</h4>
-                    <p class="detail-txt">2時間</p>
+                    <h4>制作期間</h4>
+                    <p class="detail-txt">1週間程度</p>
                 </section>
                 <section>
-                    <h4>製作について</h4>
-                    <p class="detail-txt">Illustratorの操作に慣れるため空き時間などに取り組んでいる作字の１つ。
-                    <br>その時の気分や目についた文字列からスケッチを起こして製作している。
-                    <br>この製作時はとにかく寒すぎてこの文言しか思い浮かばなかった。
-                    </p>
+                    <h4>制作について</h4>
+                    <p class="detail-txt">ターゲットの年齢層が広く、iPadやPCなど、デジタル機器の業務内での取り扱いに慣れていない人も多い中、
+                    サービスを社内に広く展開していく必要があったため、分かりやすさ・伝わりやすさを意識して製作した。
+                    <br>何度も手順を追いながら、自分は当たり前のこととしてスキップしてしまっている手順がないか確認し、画面遷移や入力内容が分かるようこまめに画像や図を挿入した。</p>
                 </section>
             </article>
             <section class="move">
                 <ul>
-                    <li><a href="detail_10.html">前へ</a></li>
+                    <li><a href="detail_12.html">前へ</a></li>
                     <li><a href="../index.html">作品TOPへ</a></li>
-                    <li><a href="detail_12.html">次へ</a></li>
+                    <li><a href="detail_10.html">次へ</a></li>
                 </ul>
-            </section>
+            </section>           
         </main>
         <footer class="foot-area">　
-            <p class="footer-txt">&copy;2021 Haru koda.</p>        
+            <p class="footer-txt">&copy;2022 Haru koda.</p>        
         </footer>
     </body>
 </html>
