--- a/about/index.html
+++ b/about/index.html
@@ -116,7 +116,7 @@
                     <section>
                         <h4>性格</h4>
                         <p class="profile-txt">子どもの頃から絵を描くことや物を作ることが好きです。
-                        誰かの役に立つために・誰かを喜ばせるために、が一番のモチベーションになります。<br>
+                        誰かの役に立つために・誰かを喜ばせるために、がものづくりの一番のモチベーションになります。<br>
                         新しいことや知らないことを見つけて勉強することが好きな性格も相まって、
                         目的達成のためには、その時点で経験や知識のないことでも、積極的に調査や学習に取り組むことができます。</p>
                     </section>
