--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <main class="animsition">
             <section class="works-area" data-animsition-out-class="fade-out">
                 <ul class="works-list">
+                    <li><a href="detail/detail_19.html"><img src="img/thumbnail/works_19.jpg" ></a></li>
                     <li><a href="detail/detail_18.html"><img src="img/thumbnail/works_18.jpg" ></a></li>
                     <li><a href="detail/detail_17.html"><img src="img/thumbnail/works_17.jpg" ></a></li>
                     <li><a href="detail/detail_16.html"><img src="img/thumbnail/works_16.jpg" ></a></li>
