--- a/detail/detail_18.html
+++ b/detail/detail_18.html
@@ -91,7 +91,7 @@
             </article>
             <section class="move">
                 <ul>
-                    <li></li>
+                    <li><a href="detail_19.html">前へ</a></li>
                     <li><a href="../index.html">作品TOPへ</a></li>
                     <li><a href="detail_17.html">次へ</a></li>
                 </ul>
