--- a/detail/detail_15.html
+++ b/detail/detail_15.html
@@ -65,7 +65,7 @@
             </article>
             <section class="move">
                 <ul>
-                    <li></li>
+                    <li><a href="detail_16.html">前へ</a></li>
                     <li><a href="../index.html">作品TOPへ</a></li>
                     <li><a href="detail_14.html">次へ</a></li>
                 </ul>
